--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ logging.level.org.hibernate.type=trace
 spring.devtools.livereload.enabled=true
 
 
+spring.mvc.hiddenmethod.filter.enabled=true
 
 
 
