--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.devtools.livereload.enabled=true
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
 
 
 
