--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.thymeleaf.suffix=.html
 spring.profiles.include=oauth
 
 spring.data.web.pageable.one-indexed-parameters=true
+
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
